[workspace]
resolver = "2"
members = ["archiver", "config", "runner", "template", "data-utils", "client"]

[package]
name = "aqora"
version = "0.22.2"
edition = "2021"
default-run = "aqora"
publish = false

[lib]
name = "aqora_cli"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "aqora"

[features]
default = []
extension-module = ["pyo3/extension-module", "pyo3/abi3-py39", "pyo3/abi3"]

[dependencies]
aqora-client = { path = "client", version = "0.22.2" }
aqora-archiver = { path = "archiver", features = [
  "indicatif",
  "tokio",
  "tracing",
], version = "0.22.2" }
aqora-config = { path = "config", version = "0.22.2" }
aqora-runner = { path = "runner", features = ["clap"], version = "0.22.2" }
aqora-template = { path = "template", version = "0.22.2" }
aqora-data-utils = { path = "data-utils", version = "0.22.2" }

axum = "0.7"
base32 = "0.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "cargo", "color", "env"] }
crc32fast = "1.4"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dirs = "5.0"
dunce = "1.0"
fs4 = { version = "0.8", features = ["tokio"] }
futures = "0.3"
graphql_client = "0.14"
hostname = "0.4"
human-errors = "0.1"
ignore = "0.4"
indicatif = "0.17"
lazy_static = "1.4"
mime = "0.3"
open = "5.0"
owo-colors = { version = "4.0", features = ["supports-colors"] }
passterm = "2.0"
pyo3 = { version = "0.28", features = ["serde"] }
pyo3-async-runtimes = { version = "0.28", features = [
  "attributes",
  "tokio-runtime",
] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
  "stream",
  "rustls-tls",
] }
rmp-serde = "1.1.2"
sentry = { version = "0.38", default-features = false, features = [
  "backtrace",
  "contexts",
  "debug-images",
  "panic",
  "reqwest",
  "rustls",
  "tower",
  "tracing",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
supports-color = "3.0"
tempfile = "3.9"
thiserror = "1.0"
tokio = { version = "1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "signal",
  "fs",
  "process",
  "io-util",
] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
toml_edit = "0.22"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
url = { version = "2.5", features = ["serde"] }
uuid = "1.7"
which = "6.0"
git2 = { version = "0.19.0", default-features = false }
ring = "0.17.14"
qrcode = { version = "0.14.1", default-features = false }
regex = "1.11.1"
comfy-table = "7.1.4"
ron = { version = "0.10", features = ["indexmap"] }
parquet = { version = "56" }
async-trait = "0.1"
bytes = "1.10"
content_disposition = "0.4.0"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["set-header", "trace"] }
semver = { version = "1.0.26", features = ["serde"] }
slug = "0.1.6"

[build-dependencies]
toml_edit = "0.22"
sentry-types = "0.32"

[dev-dependencies]
pretty_assertions = "1.4.0"

[patch.crates-io]
arrow = { git = "https://github.com/aqora-io/arrow-rs", branch = "dataset" }
parquet = { git = "https://github.com/aqora-io/arrow-rs", branch = "dataset" }
arrow-array = { git = "https://github.com/aqora-io/arrow-rs", branch = "dataset" }
arrow-buffer = { git = "https://github.com/aqora-io/arrow-rs", branch = "dataset" }
arrow-data = { git = "https://github.com/aqora-io/arrow-rs", branch = "dataset" }
arrow-schema = { git = "https://github.com/aqora-io/arrow-rs", branch = "dataset" }
arrow-ipc = { git = "https://github.com/aqora-io/arrow-rs", branch = "dataset" }
