[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "aqora-cli"
version = "0.1.14"
description = "The aqora command line interface"
authors = [{ name = "S.A.S Aqora Quantum", email = "hello@aqora.io" }]
requires-python = ">=3.8"
# keywords = []
# classifiers = []

dependencies = [
    "uv >=0.1.18, <0.2.0",
]

[project.optional-dependencies]
venv = [
    "build >=1.2.0, <2.0.0",
    "setuptools >=61.0",
    "ujson >= 5.9.0, <6.0.0",
    "ipykernel >=6.29.4, <7.0.0",
]

[project.urls]
Repository = "https://github.com/aqora-io/cli"
Documentation = "https://github.com/aqora-io/cli"

[project.scripts]
aqora = "aqora_cli:main"

[tool.maturin]
module-name = "aqora_cli"
strip = true
features = ["extension-module"]
