[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "aqora-cli"
description = "The aqora command line interface"
authors = [{ name = "S.A.S Aqora Quantum", email = "hello@aqora.io" }]
requires-python = ">=3.8"
dynamic = ["version"]
# keywords = []
# classifiers = []

dependencies = ["typing-extensions>=4.13.2", "uv >=0.3.2, <1.0.0"]

[project.entry-points."fsspec.specs"]
aqora = "aqora_cli.fsspec.AqoraFileSystem"

[project.optional-dependencies]
venv = [
  "build >=1.2.0, <2.0.0",
  "setuptools >=61.0",
  "ujson >= 5.9.0, <6.0.0",
  "jupyterlab >= 4.2.1, < 5.0.0",
  "ipykernel >=6.29.4, <7.0.0",
  "nbconvert >= 7.16.4, <8.0.0",
  "nbformat >= 5.10.4, <6.0.0",
]

fsspec = ["fsspec>=2025.3.0"]
pyarrow = ["fsspec>=2025.3.0", "pyarrow>=17.0.0"]

[project.urls]
Repository = "https://github.com/aqora-io/cli"
Documentation = "https://github.com/aqora-io/cli"

[project.scripts]
aqora = "aqora_cli:main"

[tool.maturin]
python-source = "python"
module-name = "aqora_cli._aqora_cli"
strip = true
features = ["extension-module"]

[dependency-groups]
dev = [
  "fsspec>=2025.3.0",
  "pandas>=2.0.3",
  "pandas-stubs>=2.0.3.230814",
  "polars>=1.8.2",
  "pyarrow>=17.0.0",
  "pyarrow-stubs>=17.19",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.24.0",
]
