[package]
name = "aqora-auth-proxy"
version.workspace = true
license.workspace = true
edition = "2021"
publish = false

[lib]
name = "aqora_auth_proxy"
path = "src/lib.rs"

[[bin]]
name = "auth-proxy"
path = "src/main.rs"

[dependencies]
http = "1.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
bytes = "1.10"
base64 = "0.22"
ring = "0.17.14"
thiserror = "1.0"
pem = "3"

# bin-only
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
clap = { version = "4.4", features = ["derive"] }
url = "2.5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
