[package]
name = "aqora-client"
version = "0.18.0"
edition = "2021"
publish = false

[features]
default = [
  "trace",
  "retry",
  "checksum",
  "multipart",
  "credentials",
  "s3",
  "tokio-ws",
  "rustls-tls-webpki-roots",
  "threaded",
  "tokio-time",
  "crc32fast",
]
threaded = []
ws = ["graphql-ws-client"]
trace = ["tracing", "tower-http", "tower-http/trace", "serde/derive"]
s3 = []
retry = ["tower/retry"]
checksum = []
multipart = ["s3"]
credentials = []
tokio-ws = ["ws", "tokio-tungstenite", "tokio/time"]
rustls-tls-webpki-roots = [
  "reqwest/rustls-tls-webpki-roots",
  "tokio-tungstenite/rustls-tls-webpki-roots",
]
tokio-time = ["tokio/time"]

default-wasm = ["wasm-time"]
wasm = [
  "wasm-bindgen-futures",
  "web-sys",
  "web-sys/Window",
  "web-sys/WorkerGlobalScope",
]
wasm-time = ["wasm"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
] }
graphql_client = "0.14"
url = "2.5"
thiserror = "1.0"
serde_json = "1.0"
tracing = { version = "0.1", optional = true }
async-trait = "0.1"
futures = "0.3"
pin-project-lite = "0.2"
bytes = "1.10"
crc32fast = { version = "1.4", optional = true }
base64 = "0.22"
tokio = "1.45"
tokio-util = { version = "0.7", features = ["io"] }

graphql-ws-client = { version = "0.11", features = [
  "client-graphql-client",
  "tungstenite",
], optional = true }
tokio-tungstenite = { version = "0.24", optional = true }

wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true }
tower = "0.5.2"
tower-http = { version = "0.6.6", optional = true }
http = "1.1.0"
http-body = "1.0.1"
serde = "1.0"
http-body-util = "0.1.3"

[dev-dependencies]
aws-config = "1.1"
aws-sdk-s3 = "1.91"
tokio = { version = "1", features = ["macros"] }
