[package]
name = "aqora-data-utils"
version = "0.18.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["all-formats", "all-codecs", "fs", "aqora-client-threaded"]
default-wasm = [
  "wasm",
  "all-formats",
  "all-codecs",
  "aqora-client",
  "aqora-client-credentials",
  "aqora-client-retry",
]
all-formats = ["json", "csv", "ipc"]
all-codecs = ["brotli", "flate2", "lz4", "zstd", "snap"]
aqora-client = [
  "dep:aqora-client",
  "graphql_client",
  "url",
  "http",
  "http-body",
  "http-serde",
  "tower",
]
aqora-client-threaded = [
  "aqora-client",
  "aqora-client/threaded",
  "aqora-client/tokio-time",
]
aqora-client-credentials = ["aqora-client", "aqora-client/credentials"]
aqora-client-retry = ["aqora-client", "aqora-client/retry"]
aqora-client-checksum = ["aqora-client", "aqora-client/checksum"]
aqora-client-crc32fast = ["aqora-client-checksum", "aqora-client/crc32fast"]
csv = ["dep:csv", "csv-core"]
json = []
ipc = ["arrow-ipc", "arrow/ipc"]
parquet-no-send = ["parquet/async-no-send"]
brotli = ["parquet/brotli"]
flate2 = ["parquet/flate2-zlib-rs"]
lz4 = ["parquet/lz4", "arrow-ipc/lz4"]
zstd = ["parquet/zstd", "arrow-ipc/zstd"]
snap = ["parquet/snap"]
wasm = [
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "wasm-streams",
  "futures-io",
  "tokio-util",
  "web-sys",
  "js-sys",
  "serde-wasm-bindgen",
  "ts-rs",
  "parquet-no-send",
  "aqora-client/wasm-time",
  "aqora-client-credentials",
  "aqora-client-retry",
  "aqora-client-crc32fast",
]
wasm-test = [
  "default-wasm",
  "wasm-bindgen-test",
  "console_error_panic_hook",
  "include_dir",
  "all-codecs",
  "reqwest",
  "web-sys/WorkerGlobalScope",
  "web-sys/Crypto",
]
fs = ["tokio/fs", "rand"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true, features = [
  "futures-core-03-stream",
] }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "console",
  "Blob",
  "BlobPropertyBag",
  "TransformStream",
  "WritableStream",
  "WritableStreamDefaultWriter",
  "ReadableStream",
  "ReadableStreamDefaultReader",
  "FileReaderSync",
] }
ts-rs = { version = "11.0", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-streams = { version = "0.4", optional = true }
wasm-bindgen-test = { version = "0.3", optional = true }
include_dir = { version = "0.7", optional = true }

aqora-client = { path = "../client", optional = true, default-features = false, features = [
  "multipart",
] }
tower = { version = "0.5", optional = true }
graphql_client = { version = "0.14", optional = true }
reqwest = { version = "0.12", optional = true, features = ["json"] }
url = { version = "2.5", optional = true, features = ["serde"] }
http = { version = "1.3", optional = true }
http-body = { version = "1.0", optional = true }
http-serde = { version = "2.1", optional = true }

arrow = { version = "56", default-features = false }
arrow-ipc = { version = "56", default-features = false, optional = true }
serde_arrow = { version = "0.13.5", features = ["arrow-56"] }
parquet = { version = "56", default-features = false, features = [
  "async",
  "arrow",
  "simdutf8",
] }
thiserror = "2"
tokio = { version = "1", default-features = false, features = [
  "io-util",
  "rt",
  "sync",
  "macros",
  "bytes",
] }
tokio-util = { version = "0.7", optional = true, features = ["compat", "io"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
futures-io = { version = "0.3", optional = true }
csv = { version = "1.3", optional = true }
csv-core = { version = "0.1", optional = true }

serde_json = { version = "1.0", features = ["preserve_order"] }
bytes = "1.10"
serde = { version = "1.0", features = ["derive"] }
regex = "1.11"
regex-syntax = { version = "0.8", default-features = false }
indexmap = { version = "2.9", features = ["serde"] }
ron = { version = "0.10.1", features = ["indexmap"] }
chrono = "0.4"
async-trait = "0.1"
lazy_static = "1.5"
rand = { version = "0.9", optional = true }
pin-project = "1.1"
nom = "8.0.0"

[dev-dependencies]
tempfile = "3.2"
