[package]
name = "aqora-runner"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aqora-config = { path = "../config" }
futures = "0.3"
lazy_static = "1.4"
pyo3 = { version = "0.20", features = ["auto-initialize", "serde"] }
pyo3-asyncio = { version = "0.20", features = ["attributes", "tokio-runtime"] }
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "signal", "process", "fs"] }
split-stream-by = "0.1"
