[package]
name = "aqora-template"
version = "0.5.0"
edition = "2021"
publish = false

[dependencies]
derive_builder = "0.20.2"
handlebars = { version = "6.1.0", features = ["rust-embed"] }
lazy_static = "1.5.0"
regex = "1.11.0"
rust-embed = "8.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"

[dev-dependencies]
tempfile = "3.13.0"
