[package]
name = "aqora-template"
version = "0.18.0"
edition = "2021"
publish = false

[dependencies]
derive_builder = "0.20"
handlebars = { version = "6.1", features = ["rust-embed"] }
lazy_static = "1.5"
regex = "1.11"
rust-embed = "8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3.13"
