[project]
name = "submission"
version = "0.2.0"
requires-python = ">=3.7"

dependencies = [
    "pyzx>=0.7.3,<0.8.0",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.aqora]
type = "submission"
competition = "AENvbXBldGl0aW9uAY1lGdRtf3iuX8d6Ugc2lQ"
entity = "AFVzZXIBjWUYOQ110JFFPnv8KqdE"

[tool.aqora.refs]
reduce = "submission.reduce"
