[project]
name = "use-case"
version = "0.1.1"
requires-python = ">=3.7"

dependencies = [
    "pyzx>=0.7.3,<0.8.0",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.aqora]
type = "use_case"
competition = "AENvbXBldGl0aW9uAY1lGdRtf3iuX8d6Ugc2lQ"
data = "data"
generator = "use_case.cases"
aggregator = "use_case.aggregate"

[[tool.aqora.layers]]
evaluate = "$reduce"
metric = "use_case.metric"
