[project]
name = "use-case"
version = "0.1.2"
requires-python = ">=3.7"

dependencies = [
    "pyzx>=0.7.3,<0.8.0",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.aqora]
type = "use_case"
competition = "test"
data = "data"
generator = "use_case.cases"
aggregator = "use_case.aggregate"

[[tool.aqora.layers]]
name = "reduce"
transform = "$reduce"
metric = { path = "use_case.metric", context = true }
